[gd_scene load_steps=22 format=2]

[ext_resource path="res://graphics/player/defalut_inventory_bg.png" type="Texture" id=1]
[ext_resource path="res://graphics/test/player.png" type="Texture" id=2]
[ext_resource path="res://graphics/font/stardust.tres" type="DynamicFont" id=3]
[ext_resource path="res://graphics/button_pressed.png" type="Texture" id=4]
[ext_resource path="res://graphics/button_normal.png" type="Texture" id=5]
[ext_resource path="res://UI/CharacterSheet.gd" type="Script" id=6]
[ext_resource path="res://graphics/StatSlot.png" type="Texture" id=7]
[ext_resource path="res://graphics/minusBtnNormal.png" type="Texture" id=8]
[ext_resource path="res://graphics/minusBtnPressed.png" type="Texture" id=9]
[ext_resource path="res://graphics/minusBtnDisabled.png" type="Texture" id=10]
[ext_resource path="res://graphics/plusBtnNormal.png" type="Texture" id=11]
[ext_resource path="res://graphics/plusBtnPressed.png" type="Texture" id=12]
[ext_resource path="res://graphics/plusBtnDisabled.png" type="Texture" id=13]
[ext_resource path="res://graphics/font/joystix.tres" type="DynamicFont" id=14]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.556863 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.917647, 0.588235, 0.168627, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.556863 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.917647, 0.588235, 0.168627, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.556863 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.917647, 0.588235, 0.168627, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.580392, 0.0862745, 0.0862745, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0.486275 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0.619608, 0.207843, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Theme" id=7]
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.917647, 0.588235, 0.168627, 1 )
Button/colors/font_color_pressed = Color( 0.917647, 0.588235, 0.168627, 1 )
Button/constants/hseparation = 2
Button/fonts/font = ExtResource( 3 )
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = SubResource( 1 )
Button/styles/normal = SubResource( 2 )
Button/styles/pressed = SubResource( 3 )
CheckButton/colors/font_color = Color( 1, 1, 1, 1 )
CheckButton/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
CheckButton/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
CheckButton/colors/font_color_hover_pressed = Color( 0.917647, 0.588235, 0.168627, 1 )
CheckButton/colors/font_color_pressed = Color( 0.917647, 0.588235, 0.168627, 1 )
CheckButton/constants/check_vadjust = 0
CheckButton/constants/hseparation = 4
CheckButton/fonts/font = ExtResource( 3 )
CheckButton/icons/off = null
CheckButton/icons/off_disabled = null
CheckButton/icons/on = null
CheckButton/icons/on_disabled = null
CheckButton/styles/disabled = null
CheckButton/styles/focus = null
CheckButton/styles/hover = null
CheckButton/styles/hover_pressed = null
CheckButton/styles/normal = null
CheckButton/styles/pressed = null
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = ExtResource( 3 )
Label/styles/normal = null
ProgressBar/colors/font_color = Color( 0.94, 0.94, 0.94, 1 )
ProgressBar/colors/font_color_shadow = Color( 0, 0, 0, 1 )
ProgressBar/fonts/font = ExtResource( 14 )
ProgressBar/styles/bg = SubResource( 4 )
ProgressBar/styles/fg = SubResource( 5 )
Tree/colors/custom_button_font_highlight = Color( 1, 1, 1, 1 )
Tree/colors/drop_position_color = Color( 1, 0.3, 0.2, 1 )
Tree/colors/font_color = Color( 1, 1, 1, 1 )
Tree/colors/font_color_selected = Color( 1, 1, 1, 1 )
Tree/colors/guide_color = Color( 0, 0, 0, 0.1 )
Tree/colors/relationship_line_color = Color( 0.27, 0.27, 0.27, 1 )
Tree/colors/title_button_color = Color( 0.88, 0.88, 0.88, 1 )
Tree/constants/button_margin = 4
Tree/constants/draw_guides = 1
Tree/constants/draw_relationship_lines = 0
Tree/constants/hseparation = 4
Tree/constants/item_margin = 12
Tree/constants/scroll_border = 4
Tree/constants/scroll_speed = 12
Tree/constants/vseparation = 4
Tree/fonts/font = ExtResource( 3 )
Tree/fonts/title_button_font = ExtResource( 3 )
Tree/icons/arrow = null
Tree/icons/arrow_collapsed = null
Tree/icons/checked = null
Tree/icons/select_arrow = null
Tree/icons/unchecked = null
Tree/icons/updown = null
Tree/styles/bg = SubResource( 6 )
Tree/styles/bg_focus = SubResource( 6 )
Tree/styles/button_pressed = null
Tree/styles/cursor = null
Tree/styles/cursor_unfocused = null
Tree/styles/custom_button = null
Tree/styles/custom_button_hover = null
Tree/styles/custom_button_pressed = null
Tree/styles/selected = null
Tree/styles/selected_focus = null
Tree/styles/title_button_hover = null
Tree/styles/title_button_normal = null
Tree/styles/title_button_pressed = null

[node name="CharacterSheet" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
patch_margin_left = 30
patch_margin_top = 30
patch_margin_right = 30
patch_margin_bottom = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 30.0
margin_right = -32.0
margin_bottom = -30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterBg" type="NinePatchRect" parent="HBoxContainer"]
margin_right = 280.0
margin_bottom = 540.0
rect_min_size = Vector2( 280, 540 )
texture = ExtResource( 1 )
patch_margin_left = 20
patch_margin_top = 30
patch_margin_right = 20
patch_margin_bottom = 30

[node name="CharacterTexture" type="TextureRect" parent="HBoxContainer/CharacterBg"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 100.0
margin_right = -20.0
margin_bottom = -100.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_left = 284.0
margin_right = 324.0
margin_bottom = 540.0
rect_min_size = Vector2( 40, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 328.0
margin_right = 952.0
margin_bottom = 540.0
size_flags_horizontal = 3

[node name="Stats" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 624.0
margin_bottom = 540.0
size_flags_vertical = 3

[node name="MainStats" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/Stats"]
margin_right = 350.0
margin_bottom = 540.0
rect_min_size = Vector2( 350, 0 )
custom_constants/separation = 14

[node name="Strength" type="Control" parent="HBoxContainer/VBoxContainer/Stats/MainStats"]
margin_right = 350.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )

[node name="StatBg" type="TextureRect" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Strength"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.0
margin_top = -30.0
margin_right = 149.0
margin_bottom = 30.0
rect_min_size = Vector2( 300, 60 )
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Min" type="TextureButton" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Strength/StatBg" groups=[
"MinButtons",
]]
margin_left = -48.0
margin_top = -6.0
margin_right = 12.0
margin_bottom = 64.0
rect_min_size = Vector2( 60, 70 )
disabled = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )
texture_disabled = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plus" type="TextureButton" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Strength/StatBg" groups=[
"PlusButtons",
]]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -36.0
margin_right = 48.0
margin_bottom = 34.0
rect_min_size = Vector2( 60, 70 )
disabled = true
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 12 )
texture_disabled = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Strength/StatBg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -30.0
margin_right = 130.0
margin_bottom = 30.0
rect_min_size = Vector2( 260, 60 )
theme = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Strength/StatBg/Stats"]
margin_top = 14.0
margin_right = 216.0
margin_bottom = 46.0
size_flags_horizontal = 3
text = "힘"

[node name="Change" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Strength/StatBg/Stats" groups=[
"ChangeLabels",
]]
margin_left = 220.0
margin_top = 14.0
margin_right = 220.0
margin_bottom = 46.0
custom_colors/font_color = Color( 1, 0, 0, 1 )

[node name="Value" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Strength/StatBg/Stats"]
margin_left = 224.0
margin_top = 14.0
margin_right = 260.0
margin_bottom = 46.0
text = "28"

[node name="Agility" type="Control" parent="HBoxContainer/VBoxContainer/Stats/MainStats"]
margin_top = 74.0
margin_right = 350.0
margin_bottom = 134.0
rect_min_size = Vector2( 0, 60 )

[node name="StatBg" type="TextureRect" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Agility"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.0
margin_top = -30.0
margin_right = 149.0
margin_bottom = 30.0
rect_min_size = Vector2( 300, 60 )
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Min" type="TextureButton" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Agility/StatBg" groups=[
"MinButtons",
]]
margin_left = -48.0
margin_top = -6.0
margin_right = 12.0
margin_bottom = 64.0
rect_min_size = Vector2( 60, 70 )
disabled = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )
texture_disabled = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plus" type="TextureButton" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Agility/StatBg" groups=[
"PlusButtons",
]]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -36.0
margin_right = 48.0
margin_bottom = 34.0
rect_min_size = Vector2( 60, 70 )
disabled = true
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 12 )
texture_disabled = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Agility/StatBg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -30.0
margin_right = 130.0
margin_bottom = 30.0
rect_min_size = Vector2( 260, 60 )
theme = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Agility/StatBg/Stats"]
margin_top = 14.0
margin_right = 216.0
margin_bottom = 46.0
size_flags_horizontal = 3
text = "민첩"

[node name="Change" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Agility/StatBg/Stats" groups=[
"ChangeLabels",
]]
margin_left = 220.0
margin_top = 14.0
margin_right = 220.0
margin_bottom = 46.0
custom_colors/font_color = Color( 1, 0, 0, 1 )

[node name="Value" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Agility/StatBg/Stats"]
margin_left = 224.0
margin_top = 14.0
margin_right = 260.0
margin_bottom = 46.0
text = "28"

[node name="Intellect" type="Control" parent="HBoxContainer/VBoxContainer/Stats/MainStats"]
margin_top = 148.0
margin_right = 350.0
margin_bottom = 208.0
rect_min_size = Vector2( 0, 60 )

[node name="StatBg" type="TextureRect" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Intellect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.0
margin_top = -30.0
margin_right = 149.0
margin_bottom = 30.0
rect_min_size = Vector2( 300, 60 )
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Min" type="TextureButton" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Intellect/StatBg" groups=[
"MinButtons",
]]
margin_left = -48.0
margin_top = -6.0
margin_right = 12.0
margin_bottom = 64.0
rect_min_size = Vector2( 60, 70 )
disabled = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )
texture_disabled = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plus" type="TextureButton" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Intellect/StatBg" groups=[
"PlusButtons",
]]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -36.0
margin_right = 48.0
margin_bottom = 34.0
rect_min_size = Vector2( 60, 70 )
disabled = true
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 12 )
texture_disabled = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Intellect/StatBg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -30.0
margin_right = 130.0
margin_bottom = 30.0
rect_min_size = Vector2( 260, 60 )
theme = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Intellect/StatBg/Stats"]
margin_top = 14.0
margin_right = 216.0
margin_bottom = 46.0
size_flags_horizontal = 3
text = "지능"

[node name="Change" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Intellect/StatBg/Stats" groups=[
"ChangeLabels",
]]
margin_left = 220.0
margin_top = 14.0
margin_right = 220.0
margin_bottom = 46.0
custom_colors/font_color = Color( 1, 0, 0, 1 )

[node name="Value" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Intellect/StatBg/Stats"]
margin_left = 224.0
margin_top = 14.0
margin_right = 260.0
margin_bottom = 46.0
text = "28"

[node name="Wisdom" type="Control" parent="HBoxContainer/VBoxContainer/Stats/MainStats"]
margin_top = 222.0
margin_right = 350.0
margin_bottom = 282.0
rect_min_size = Vector2( 0, 60 )

[node name="StatBg" type="TextureRect" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Wisdom"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.0
margin_top = -30.0
margin_right = 149.0
margin_bottom = 30.0
rect_min_size = Vector2( 300, 60 )
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Min" type="TextureButton" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Wisdom/StatBg" groups=[
"MinButtons",
]]
margin_left = -48.0
margin_top = -6.0
margin_right = 12.0
margin_bottom = 64.0
rect_min_size = Vector2( 60, 70 )
disabled = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )
texture_disabled = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plus" type="TextureButton" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Wisdom/StatBg" groups=[
"PlusButtons",
]]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -36.0
margin_right = 48.0
margin_bottom = 34.0
rect_min_size = Vector2( 60, 70 )
disabled = true
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 12 )
texture_disabled = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Wisdom/StatBg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -30.0
margin_right = 130.0
margin_bottom = 30.0
rect_min_size = Vector2( 260, 60 )
theme = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Wisdom/StatBg/Stats"]
margin_top = 14.0
margin_right = 216.0
margin_bottom = 46.0
size_flags_horizontal = 3
text = "지혜"

[node name="Change" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Wisdom/StatBg/Stats" groups=[
"ChangeLabels",
]]
margin_left = 220.0
margin_top = 14.0
margin_right = 220.0
margin_bottom = 46.0
custom_colors/font_color = Color( 1, 0, 0, 1 )

[node name="Value" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Wisdom/StatBg/Stats"]
margin_left = 224.0
margin_top = 14.0
margin_right = 260.0
margin_bottom = 46.0
text = "28"

[node name="Constitution" type="Control" parent="HBoxContainer/VBoxContainer/Stats/MainStats"]
margin_top = 296.0
margin_right = 350.0
margin_bottom = 356.0
rect_min_size = Vector2( 0, 60 )

[node name="StatBg" type="TextureRect" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Constitution"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.0
margin_top = -30.0
margin_right = 149.0
margin_bottom = 30.0
rect_min_size = Vector2( 300, 60 )
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Min" type="TextureButton" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Constitution/StatBg" groups=[
"MinButtons",
]]
margin_left = -48.0
margin_top = -6.0
margin_right = 12.0
margin_bottom = 64.0
rect_min_size = Vector2( 60, 70 )
disabled = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )
texture_disabled = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plus" type="TextureButton" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Constitution/StatBg" groups=[
"PlusButtons",
]]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -36.0
margin_right = 48.0
margin_bottom = 34.0
rect_min_size = Vector2( 60, 70 )
disabled = true
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 12 )
texture_disabled = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Constitution/StatBg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -30.0
margin_right = 130.0
margin_bottom = 30.0
rect_min_size = Vector2( 260, 60 )
theme = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Constitution/StatBg/Stats"]
margin_top = 14.0
margin_right = 216.0
margin_bottom = 46.0
size_flags_horizontal = 3
text = "체질"

[node name="Change" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Constitution/StatBg/Stats" groups=[
"ChangeLabels",
]]
margin_left = 220.0
margin_top = 14.0
margin_right = 220.0
margin_bottom = 46.0
custom_colors/font_color = Color( 1, 0, 0, 1 )

[node name="Value" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Constitution/StatBg/Stats"]
margin_left = 224.0
margin_top = 14.0
margin_right = 260.0
margin_bottom = 46.0
text = "28"

[node name="Dexterity" type="Control" parent="HBoxContainer/VBoxContainer/Stats/MainStats"]
margin_top = 370.0
margin_right = 350.0
margin_bottom = 430.0
rect_min_size = Vector2( 0, 60 )

[node name="StatBg" type="TextureRect" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Dexterity"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.0
margin_top = -30.0
margin_right = 149.0
margin_bottom = 30.0
rect_min_size = Vector2( 300, 60 )
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Min" type="TextureButton" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Dexterity/StatBg" groups=[
"MinButtons",
]]
margin_left = -48.0
margin_top = -6.0
margin_right = 12.0
margin_bottom = 64.0
rect_min_size = Vector2( 60, 70 )
disabled = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )
texture_disabled = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plus" type="TextureButton" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Dexterity/StatBg" groups=[
"PlusButtons",
]]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -36.0
margin_right = 48.0
margin_bottom = 34.0
rect_min_size = Vector2( 60, 70 )
disabled = true
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 12 )
texture_disabled = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Dexterity/StatBg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -30.0
margin_right = 130.0
margin_bottom = 30.0
rect_min_size = Vector2( 260, 60 )
theme = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Dexterity/StatBg/Stats"]
margin_top = 14.0
margin_right = 216.0
margin_bottom = 46.0
size_flags_horizontal = 3
text = "손재주"

[node name="Change" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Dexterity/StatBg/Stats" groups=[
"ChangeLabels",
]]
margin_left = 220.0
margin_top = 14.0
margin_right = 220.0
margin_bottom = 46.0
custom_colors/font_color = Color( 1, 0, 0, 1 )

[node name="Value" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/Dexterity/StatBg/Stats"]
margin_left = 224.0
margin_top = 14.0
margin_right = 260.0
margin_bottom = 46.0
text = "28"

[node name="StatsPoint" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Stats/MainStats"]
margin_top = 444.0
margin_right = 350.0
margin_bottom = 494.0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/StatsPoint"]
margin_top = 9.0
margin_right = 146.0
margin_bottom = 41.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "포인트 : 7"
align = 1
valign = 1

[node name="Confirm" type="TextureButton" parent="HBoxContainer/VBoxContainer/Stats/MainStats/StatsPoint"]
margin_left = 150.0
margin_right = 350.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Stats/MainStats/StatsPoint/Confirm"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "적용"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/Stats"]
margin_left = 354.0
margin_right = 384.0
margin_bottom = 540.0
rect_min_size = Vector2( 30, 0 )

[node name="DerivedStats" type="ScrollContainer" parent="HBoxContainer/VBoxContainer/Stats"]
margin_left = 388.0
margin_right = 624.0
margin_bottom = 540.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/Stats/DerivedStats"]
margin_right = 236.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HP" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Stats/DerivedStats/VBoxContainer"]
margin_right = 236.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )

[node name="Text" type="Label" parent="HBoxContainer/VBoxContainer/Stats/DerivedStats/VBoxContainer/HP"]
margin_top = 9.0
margin_right = 178.0
margin_bottom = 41.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "체력"

[node name="Value" type="Label" parent="HBoxContainer/VBoxContainer/Stats/DerivedStats/VBoxContainer/HP"]
margin_left = 182.0
margin_top = 9.0
margin_right = 236.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 3 )
text = "100"

[node name="Mana" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Stats/DerivedStats/VBoxContainer"]
margin_top = 54.0
margin_right = 236.0
margin_bottom = 104.0
rect_min_size = Vector2( 0, 50 )

[node name="Text" type="Label" parent="HBoxContainer/VBoxContainer/Stats/DerivedStats/VBoxContainer/Mana"]
margin_top = 9.0
margin_right = 196.0
margin_bottom = 41.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "마나"

[node name="Value" type="Label" parent="HBoxContainer/VBoxContainer/Stats/DerivedStats/VBoxContainer/Mana"]
margin_left = 200.0
margin_top = 9.0
margin_right = 236.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 3 )
text = "60"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Stats/MainStats/StatsPoint/Confirm" to="." method="_on_Confirm_pressed"]
